// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAreas should fetch areas 1`] = `
Object {
  "data": Object {
    "affiliations": Object {
      "edges": Array [
        Object {
          "node": Object {
            "storageGrid": Object {
              "objectAreas": Object {
                "active": Array [
                  Object {
                    "bucketName": "bucket",
                    "creationTimestamp": "2020-01-22T17:30:42Z",
                    "name": "test",
                    "namespace": "paas-test",
                    "status": Object {
                      "message": "Failed",
                      "reason": "Unknown",
                      "success": false,
                    },
                  },
                ],
              },
            },
          },
        },
      ],
    },
  },
  "errors": undefined,
  "name": "getAreas",
}
`;

exports[`getTenant should fetch tenant 1`] = `
Object {
  "data": Object {
    "affiliations": Object {
      "edges": Array [
        Object {
          "node": Object {
            "storageGrid": Object {
              "tenant": Object {
                "isRegistered": true,
              },
            },
          },
        },
      ],
    },
  },
  "errors": undefined,
  "name": "getTenant",
}
`;
